creater login modal and map user sessions to the ui

--- a/registration.html
+++ b/registration.html
@@ -1,4 +1,4 @@
-<script type="text/ng-template" id="myModalContent.html">
+<script type="text/ng-template" id="RegistrationModal">
     <div class="modal-header">
         <h3 class="modal-title">Register</h3>
     </div>
