Integrated the backgrounds to the UI. This required a modification to the Queue service as well as modifications to the way we handle routes. Of course, the javascript and html responsible for managing the carousel changed too.

--- a/public/html/carousel.html
+++ b/public/html/carousel.html
@@ -1,12 +1,11 @@
-<div style="height:500px;">
-    
-    {{current}}
-    
-</div>
 
-<button ng-click="deleteCurrent()">delete</button>
-<button ng-click="previous()"> <- </button>.....<button ng-click="next()"> -> </button>
-<button ng-click="delete()">delete</button>
-<button ng-click="add()">add</button>
-<input type="text" ng-model="key"/>
-<input type="text" ng-model="value"/>
+<button ng-click="previous()">previous</button>...<button ng-click="next()">next</button>
+<header style="background-image: url({{current.path}}); 
+        background-size: {{width}}px {{height}}px; 
+        background-repeat: no-repeat; 
+        background-position: center;
+        height: {{height}}px; width: {{width}}px;">
+    <a href="" class="left-nav col-md-1" ng-click="previous()"></a>
+    <div class="col-md-10"></div>
+    <a href="" class="right-nav col-md-1" ng-click="next()"></a>
+</header>
