Included 3rd Party Libraries and Formatted the UI
    public/lib/startbootstrap-creative
    public/lib/animate.css
    README.md
        - added 3rd party libraries and updated the
	  README.md accordingly

    public/html/carousel.html
    public/html/main.html
    public/js/carousel.js
    public/js/utilities.js
        - integrated the old UI with the new angular
	  controllers. This included copying a large
	  amount of code for clamping images to the
	  screen size. Those methods re put in
	  utilities.js.

    public/index.php
       - made it such that anything that's not an api
         call or a request for index.php will return a
	 404

--- a/public/html/carousel.html
+++ b/public/html/carousel.html
@@ -1,10 +1,9 @@
-
-<button ng-click="previous()">previous</button>...<button ng-click="next()">next</button>
 <header style="background-image: url({{current.path}}); 
         background-size: {{width}}px {{height}}px; 
         background-repeat: no-repeat; 
         background-position: center;
-        height: {{height}}px; width: {{width}}px;">
+        width: {{windowWidth}}px;
+        height: {{windowHeight}}px;">
     <a href="" class="left-nav col-md-1" ng-click="previous()"></a>
     <div class="col-md-10"></div>
     <a href="" class="right-nav col-md-1" ng-click="next()"></a>
