--- a/public/html/main.html
+++ b/public/html/main.html
@@ -2,18 +2,37 @@
 <html>
 	<head lang="en">
 	  <meta charset="utf-8">
-	  <title>AngularJS Routing</title>
+	  <title>What A Desktop</title>
           <base href="/">
 	</head>
 	<body>
 
-	  <div>
-		<ng-view></ng-view>
-	  </div>
+            <div>
+                <ng-view></ng-view>
+            </div>
+            
+            <!-- JQuery -->
+            <script src="//code.jquery.com/jquery-1.10.2.js"></script>
 
-	  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
-	  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28//angular-route.min.js"></script>
-	  <script data-main="js/whatadesktop" src="lib/requirejs/require.js"></script>
+            <!-- Angular JS -->
+            <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
+            <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28//angular-route.min.js"></script>
+
+            <!-- Bootstrap -->
+            <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.2.0/ui-bootstrap-tpls.js"></script>
+            <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css">
+
+            <!-- Font Awesome -->
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+
+            <!-- Imported Libraries -->
+            <link rel="stylesheet" href="lib/animate.css/animate.min.css" type="text/css">
+            <link rel="stylesheet" href="lib/startbootstrap-creative/css/creative.css" type="text/css">
+
+            <!-- whatadesktop -->
+            <script data-main="js/whatadesktop" src="lib/requirejs/require.js"></script>
+            <link rel="stylesheet" href="css/background.css" type="text/css">
           
 	</body>
 </html>
