Refined My Carousel Approach
    index.php
    - removed the 404 when an api or index.php is not
      requested. this broke the /queue/random and
      /image routes.

    Image.php
    - Reuqesting /image/:id will return the specified image

    Queue.php
    - Requesting /queue/:sort will return the specified queue

    carousel.html
    main.html
    carousel.js
    whatadesktop.js
    - Made major changes to the way carousels are handled. I
      removed a bunch of duplicated logic and more heavily
      rely on ngRoute. The CarouselCtrl is now just a $watch
      on the CarouselData's carousel object.

--- a/public/html/carousel.html
+++ b/public/html/carousel.html
@@ -4,7 +4,7 @@
         background-position: center;
         width: {{windowWidth}}px;
         height: {{windowHeight}}px;">
-    <a href="" class="left-nav col-md-1" ng-click="previous()"></a>
+    <a href="" class="left-nav col-md-1" ng-click="carousel.previous()"></a>
     <div class="col-md-10"></div>
-    <a href="" class="right-nav col-md-1" ng-click="next()"></a>
+    <a href="" class="right-nav col-md-1" ng-click="carousel.next()"></a>
 </header>
