--- a/public/html/main.html
+++ b/public/html/main.html
@@ -2,7 +2,7 @@
 <html>
 	<head lang="en">
 	  <meta charset="utf-8">
-	  <title>What A Desktop</title>
+	  <title>whatadesktop</title>
           <base href="/">
 	</head>
 	<body>
