added left and right margins to the carousel buttons, this gave the user a larger click to scroll area

--- a/public/html/carousel.html
+++ b/public/html/carousel.html
@@ -8,7 +8,7 @@
         <div ng-show="current" class="pull-left" ng-click="carousel.previous()"
                 style="height: {{windowHeight}}px; cursor: pointer;">
             <div class="carousel-nav" style="margin-top:{{windowHeight/2-30}}px;
-                    margin-left: 50px; font-size: 60px; opacity: 0.5">
+                    margin-right:50px; margin-left: 50px; font-size: 60px; opacity: 0.5">
                 <i class="fa fa-chevron-circle-left" style="
                     color:black;
                     background: white;
@@ -23,7 +23,7 @@
         <div ng-show="current" class="pull-right" ng-click="carousel.next()"
                 style="height: {{windowHeight}}px; cursor: pointer;">
             <div class="carousel-nav" style="margin-top:{{windowHeight/2-30}}px;
-                    margin-right: 50px; font-size: 60px; opacity: 0.5">
+                    margin-right: 50px; margin-left: 50px; font-size: 60px; opacity: 0.5">
                 <i class="fa fa-chevron-circle-right" style="
                     color:black;
                     background: white;
