--- a/public/html/whatadesktop.html
+++ b/public/html/whatadesktop.html
@@ -1,1 +1,34 @@
+<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+
+        <!--Site Name-->
+        <div class="navbar-header">
+            <a class="navbar-brand page-scroll" href="/queue/random">whatadesktop</a>
+        </div>
+
+        <!--Site Pages-->
+        <ul class="nav navbar-nav navbar-right">
+
+            <!--User-->
+                <li>
+                    <div class="dropdown" ng-controller="UserCtrl">
+                        <button class="btn dropdown-toggle" type="button" data-toggle="dropdown">
+                            {{user.name ? user.name : "User"}}
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a ng-click="changeView('user_imgs'); getBackgrounds({sort: 'saved'});">Saved</a></li>
+                            <li><a ng-click="changeView('user_imgs'); getBackgrounds({sort: 'deleted'});">Deleted</a></li>
+                            <li><a ng-click="register()">Register</a></li>
+                            <li><a ng-click="login()">Login</a></li>
+                            <li><a ng-click="logout()">Log Out</a></li>
+                        </ul>
+                    </div>
+                </li>
+
+        </ul>
+    </div>
+</nav>
+
+
 <div ng-controller="CarouselCtrl" carousel resize></div>
