Partial Saved Integration & Bug Fix
    Saved.php
    tileview.html
    tileview.js
    whatadesktop.js
        - Integrated the Saved view into the UI, sans tiles. This
	included a new Saved service for retrieving data.

    carousel.html
    carousel.js
    whatadesktop.html
        - Fixed that nasty bug a nasty bug that kept rearing its
	head in my console. It was related to window resizing.

--- a/public/html/whatadesktop.html
+++ b/public/html/whatadesktop.html
@@ -92,7 +92,7 @@
                         <ul class="dropdown-menu" style="cursor: pointer;">
                             <li><a ng-show="!user.loggedIn" ng-click="register()">Register</a></li>
                             <li><a ng-show="!user.loggedIn"  ng-click="login()">Login</a></li>
-                            <li><a ng-show="user.loggedIn"  ng-click="">Saved</a></li>
+                            <li><a ng-show="user.loggedIn"  ng-click="goto('/saved')">Saved</a></li>
                             <li><a ng-show="user.loggedIn"  ng-click="">Removed</a></li>
                             <li><a ng-show="user.loggedIn"  ng-click="logout()">Log Out</a></li>
                             
