--- a/public/html/carousel.html
+++ b/public/html/carousel.html
@@ -1,4 +1,4 @@
-<header resize style="background-image: url({{current.path}}); 
+<header style="background-image: url({{current.path}}); 
         background-size: {{width}}px {{height}}px; 
         background-repeat: no-repeat; 
         background-position: center;
