--- a/public/html/whatadesktop.html
+++ b/public/html/whatadesktop.html
@@ -38,7 +38,7 @@
                     <button ng-show="!deleted" class="btn" type="button" ng-click="setStatus('deleted')">
                         Remove
                     </button>
-                    <button ng-show="deleted" class="btn mute" type="button" ng-click="setStatus('reset'">
+                    <button ng-show="deleted" class="btn mute" type="button" ng-click="setStatus('reset')">
                         Removed
                     </button>
                 </div>
