First Time Notification
    background.css
    notifications.html
    notifications.js
        Added a first time user login modal driven by cookies.
	The modal contains information about navigation the site.

    main.html
    whatadesktop.html
    whatadesktop.js
        Integrate the notification modal

--- a/public/html/whatadesktop.html
+++ b/public/html/whatadesktop.html
@@ -132,7 +132,7 @@
     </script>
 </nav>
 
-
+<div id="tiles" ng-controller="NotificationCtrl"></div>
 <div id="carousel" ng-controller="CarouselCtrl"  ng-show="visible" carousel resize  
      ng-keydown="keypress($event)"  tabindex="0"></div>
 
