--- a/public/html/main.html
+++ b/public/html/main.html
@@ -16,6 +16,7 @@
 
             <!-- Angular JS -->
             <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+            <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-cookies.js"></script>
             <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6//angular-route.min.js"></script>
 
             <!-- Bootstrap -->
