--- a/public/html/whatadesktop.html
+++ b/public/html/whatadesktop.html
@@ -75,7 +75,9 @@
                                style="width: 300px;" spellcheck="false"
                                value="{{ currentLink }}">
                         <span class="input-group-addon" ng-click="copyLink()"
-                              style="cursor: pointer;">
+                              style="cursor: pointer;"
+                              data-toggle="tooltip" data-placement="bottom"
+                              title="Copy">
                             <i class="fa fa-files-o" aria-hidden="true"></i>
                         </span>
                       </div>
