trying to hide navabars on mobile...testing

--- a/public/html/whatadesktop.html
+++ b/public/html/whatadesktop.html
@@ -113,7 +113,7 @@
             </li>
             
             <!--Filter-->
-             <li style="cursor: pointer;">
+             <li ng-show="false" style="cursor: pointer;">
                 <div>
                     <button class="btn" type="button" 
                             ng-click="filter()">
