--- a/public/html/main.html
+++ b/public/html/main.html
@@ -2,6 +2,7 @@
 <html>
 	<head lang="en">
 	  <meta charset="utf-8">
+          <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	  <title>whatadesktop</title>
           <base href="/">
 	</head>
