more refined meta tag

--- a/public/html/main.html
+++ b/public/html/main.html
@@ -2,6 +2,7 @@
 <html>
 	<head lang="en">
 	  <meta charset="utf-8">
+          <meta name="viewport" content="initial-scale=0.33,minimum-scale=0.33,maximum-scale=0.33,user-scalable=0,width=device-width" />
 	  <title>whatadesktop</title>
           <base href="/">
 	</head>
