added a clear button to the filter

--- a/public/html/filter.html
+++ b/public/html/filter.html
@@ -79,6 +79,7 @@
             
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-default wad-btn" ng-click="save()">Save</button>
+    <button type="button" class="btn btn-default wad-btn pull-left" ng-click="save()">Save</button>
+    <button type="button" class="btn btn-default wad-btn pull-left" ng-click="clear()">Clear</button>
     <button type="button" class="btn btn-primary wad-btn" ng-click="done()">Close</button>
 </div>
